//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  password String
  role String [not null, default: 'USER']
  center String
  survies Survey [not null]
  privilages String [default: 'WRITE,READ']
}

Table VerificationToken {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Survey {
  id String [pk]
  title String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  authorEmail String [not null]
  isReviewed Boolean [default: false]
  reviewerName String
  reviewerNote String
  reviewedDate DateTime
  applicantName String
  answers Answer [not null]
  status String [default: 'PUBLISHED']
  isFinalized Boolean [default: true]
  author User [not null]
  deletedAt DateTime
  applicantId String
}

Table Answer {
  id String [pk]
  content String [not null]
  questionNumber Int [not null]
  surveyId String [not null]
  survey Survey [not null]
}

Ref: Survey.authorEmail > User.email

Ref: Answer.surveyId > Survey.id [delete: Cascade]